--- a/index.html
+++ b/index.html
@@ -10,39 +10,66 @@
 </head>
 
 <body>
+  <div class="wrapper">
+    <header class="header">
+      <nav class="nav">
+        <div class="nav__header"><button class="btn button button-close"></button><a href="#" class="logo"><img
+              src="images/logo.svg" alt="логотип cps" title="логотип cps"></a><button
+            class="btn button button-search"></button></div>
+        <div class="nav__menu-wrap">
+          <ul class="nav__menu">
+            <li><a href="#">Ремонт техники</a></li>
+            <li><a href="#">Услуги и сервисы</a></li>
+            <li><a href="#">Корпоративным клиентам</a></li>
+            <li><a href="#">Продавцам техники</a></li>
+            <li><a href="#">Пратнерам</a></li>
+            <li><a href="#">Производителям</a></li>
+            <li><a href="#">Наши сервисные центры</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+        <div class="nav__contact">
+          <div class="nav__contact-wrap"><button class="btn button button-phone"></button><button
+              class="btn button button-message"></button><button class="btn button button-user"></button></div><span
+            class="nav__contact-mail">mail@cps.com</span><span class="nav__contact-phone-number">8 800 890 8900</span>
+          <div class="nav__language">
+            <a href="#" class="nav__language-link">RU</a>
+            <a href="#" class="nav__language-link">EN</a>
+            <a href="#" class="nav__language-link">CH</a>
+          </div>
+        </div>
+  </div>
+  </nav>
+  </header>
   <section class="service">
     <header class="service-header">
-      <h2>Услуги и сервисы</h2>
-      <p class="service-header__par1">Оставить заявку</p>
-      <p class="service-header__par2">Статус ремонта</p>
+      <h2>Услуги и сервисы</h2><a href="#" class="service-header__link1 btn">Оставить заявку</a><a href="#"
+        class="service-header__link2 btn">Статус ремонта</a>
     </header>
     <nav class="service-nav">
-      <a href="#">Ремонтируемые бренды</a>
-      <a href="#">Ремонтируемые устройства</a>
-      <a href="#">Цены на услуги</a>
-      <a href="#">Адреса сервисных центров</a>
-      <a href="#">Специальные цены</a>
-      <a href="#">Отзывы</a>
+      <ul class="service-nav__wrap">
+        <li><a href="#">Ремонтируемые бренды</a></li>
+        <li><a href="#">Ремонтируемые устройства</a></li>
+        <li><a href="#">Цены на услуги</a></li>
+        <li><a href="#">Адреса сервисных центров</a></li>
+        <li><a href="#">Специальные цены</a></li>
+        <li><a href="#">Отзывы</a></li>
+      </ul>
     </nav>
     <div class="service-info">
-      <article class="service-info__article">
-        <p class="serice-info__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас
-          вы
-          можете
-          отремонтироватьсвой ноутбук Dell с официальной гарантией производителя.
-          <br>
-          <br>
-          Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество
-          постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас
-          родным и
-          близким.</p>
-        <button class="serice-info__button">Читать далее</button>
-      </article>
-      <img class="service-info__img" src="images/img.png" title="Если ты на меня сейчас смотришь, значит я в макете"
-        alt="картинка">
-
+      <div class="service-info__text-wrap">
+        <p class="service-info__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у
+          нас вы можете отремонтироватьсвой ноутбук Dell с официальной гарантией производителя. </p>
+        <p class="service-info__text">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера,
+          что подтверждает большое количество постоянных клиентов. Мы гордимся тем,
+          что к нам обращаются по рекомендациям и,
+          в свою очередь,
+          советуют нас родным и близким.</p><button class="service-info__button">Читать далее</button>
+      </div><img class="service-info__img" src="images/img.png"
+        title="Если ты на меня сейчас смотришь, значит я в макете" alt="картинка">
     </div>
   </section>
+  </div>
 </body>
 
 </html>
