--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
   <div class="wrapper">
+    <!-- header -->
     <header class="header">
       <nav class="nav">
-        <div class="nav__header"><button class="btn button button-close"></button><a href="#" class="logo"><img
+        <div class="nav__header"><button class="button button-close"></button><a href="#" class="logo"><img
               src="images/logo.svg" alt="логотип cps" title="логотип cps"></a><button
-            class="btn button button-search"></button></div>
+            class="button button-search"></button>
+        </div>
         <div class="nav__menu-wrap">
           <ul class="nav__menu">
             <li><a href="#">Ремонт техники</a></li>
@@ -29,47 +31,120 @@
           </ul>
         </div>
         <div class="nav__contact">
-          <div class="nav__contact-wrap"><button class="btn button button-phone"></button><button
-              class="btn button button-message"></button><button class="btn button button-user"></button></div><span
-            class="nav__contact-mail">mail@cps.com</span><span class="nav__contact-phone-number">8 800 890 8900</span>
-          <div class="nav__language">
-            <a href="#" class="nav__language-link">RU</a>
-            <a href="#" class="nav__language-link">EN</a>
-            <a href="#" class="nav__language-link">CH</a>
+          <div class="nav__contact-wrap">
+            <button class="button button-phone"></button>
+            <button class="button button-message"></button>
+            <button class="button button-user"></button>
+          </div>
+          <div class="nav__contact-info-wrap">
+            <a href="mailto:mail@cps.com" class="nav__contact-mail">mail@cps.com</a><a href="tel:8 800 890 8900"
+              class="nav__contact-phone-number">8 800 890 8900</a>
+            <div class="nav__language"><a href="#" class="nav__language-link">RU</a><a href="#"
+                class="nav__language-link">EN</a><a href="#" class="nav__language-link">CH</a></div>
           </div>
         </div>
-  </div>
-  </nav>
-  </header>
-  <section class="service">
-    <header class="service-header">
-      <h2>Услуги и сервисы</h2><a href="#" class="service-header__link1 btn">Оставить заявку</a><a href="#"
-        class="service-header__link2 btn">Статус ремонта</a>
+        <div class="nav__contact-service-buttons">
+          <button class="service-header__button button"></button>
+          <button class="service-header__button button"></button>
+        </div>
+      </nav>
     </header>
-    <nav class="service-nav">
-      <ul class="service-nav__wrap">
-        <li><a href="#">Ремонтируемые бренды</a></li>
-        <li><a href="#">Ремонтируемые устройства</a></li>
-        <li><a href="#">Цены на услуги</a></li>
-        <li><a href="#">Адреса сервисных центров</a></li>
-        <li><a href="#">Специальные цены</a></li>
-        <li><a href="#">Отзывы</a></li>
-      </ul>
-    </nav>
-    <div class="service-info">
-      <div class="service-info__text-wrap">
-        <p class="service-info__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у
-          нас вы можете отремонтироватьсвой ноутбук Dell с официальной гарантией производителя. </p>
-        <p class="service-info__text">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера,
-          что подтверждает большое количество постоянных клиентов. Мы гордимся тем,
-          что к нам обращаются по рекомендациям и,
-          в свою очередь,
-          советуют нас родным и близким.</p><button class="service-info__button">Читать далее</button>
-      </div><img class="service-info__img" src="images/img.png"
-        title="Если ты на меня сейчас смотришь, значит я в макете" alt="картинка">
-    </div>
-  </section>
+
+    <!-- Секция услуги и сервисы -->
+    <main class="main">
+      <section class="service">
+        <header class="service-header">
+          <h2>Услуги и сервисы</h2>
+          <div class="service-header__wrap"><button class="service-header__button button">Оставить
+              заявку</button><button class="service-header__button button">Статус ремонта</button></div>
+        </header>
+        <nav class="service-nav">
+          <ul class="service-nav__wrap">
+            <li><a href="#">Ремонтируемые бренды</a></li>
+            <li><a href="#">Ремонтируемые устройства</a></li>
+            <li><a href="#">Цены на услуги</a></li>
+            <li><a href="#">Адреса сервисных центров</a></li>
+            <li><a href="#">Специальные цены</a></li>
+            <li><a href="#">Отзывы</a></li>
+          </ul>
+        </nav>
+        <div class="service-info">
+          <div class="service-info__text-wrap">
+            <p class="service-info__text">Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у
+              нас вы можете отремонтироватьсвой ноутбук Dell с официальной гарантией производителя. </p>
+            <p class="service-info__text">Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера,
+              что подтверждает большое количество постоянных клиентов. Мы гордимся тем,
+              что к нам обращаются по рекомендациям и,
+              в свою очередь,
+              советуют нас родным и близким.</p><button class="hide-and-show-button">Читать далее</button>
+          </div><img class="service-info__img" src="images/img.png"
+            title="Если ты на меня сейчас смотришь, значит я в макете" alt="картинка">
+        </div>
+      </section>
+
+      <!-- Секция бренды  -->
+
+      <section class="brands">
+        <h2 class="brands__title">Ремонт техники различных брендов</h2>
+        <div class="brands__images-wrap brands__images-wrap-hidden">
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/lenovo.png" alt="lenovo" title="lenovo">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/hp.png" alt="hp" title="hp">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/bosch.png" alt="bosch" title="bosch">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/apple.png" alt="apple" title="apple">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/acer.png" alt="acer" title="acer">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/viewsonic.png" alt="viewsonic" title="viewsonic">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/lenovo.png" alt="lenovo" title="lenovo">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/samsung.png" alt="samsung" title="samsung">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/sony.png" alt="sony" title="sony">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/hp.png" alt="hp" title="hp">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/bosch.png" alt="bosch" title="bosch">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/apple.png" alt="apple" title="apple">
+            <button class="brands__button button"></button>
+          </div>
+          <div class="brands__images-item">
+            <img class="brands__images" src="images/brands/acer.png" alt="acer" title="acer">
+            <button class="brands__button button"></button>
+          </div>
+        </div>
+        <button id="brands-button" class="hide-and-show-button brands__button">Показать все</button>
+      </section>
+    </main>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
